<?xml version="1.0" encoding="utf-8"?><!-- TODO  Define the layout components as per the provided information in the test paper -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHeading"
        android:textSize="16pt" />

    <ListView
        android:id="@+id/ListViewCatalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.86" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ButtonViewCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnViewCart" />

        <Button
            android:id="@+id/ButtonAddBookToCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAddToCatalog" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<Button-->
            <!--android:id="@+id/ButtonEditABookInCatalog"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/btnEditABookInCatalog" />-->

        <Button
            android:id="@+id/ButtonDeleteExpensive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDelExp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/ButtonCommit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCommit" />
        <Button
            android:id="@+id/ButtonUndo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnUndo" />

    </LinearLayout>
</LinearLayout>