<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditBookActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditABook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnEditABook" />

            <Button
                android:id="@+id/btnCancelEditABook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnCancelEditABook" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtBookTitleLabel"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:text="@string/tvBookTitleLabel" />
            <!--android:layout_weight="1"-->
            <!--android:textSize="14dp"-->
            <!--android:fontFamily="sans-serif"-->
            <!--android:layout_weight="1"-->
            <EditText
                android:id="@+id/etBookTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtBookPriceLabel"
                android:layout_width="115dp"
                android:layout_height="50dp"

                android:text="@string/tvBookPriceLabel" />

            <EditText
                android:id="@+id/etBookPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>